tests/ui-msrv/transmute-pointer.stderr
error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-msrv/transmute-pointer.rs:7:50
  |
7 | const POINTER_VALUE: usize = zerocopy::transmute(&0usize as *const usize);
  |                              ------------------- ^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |                              |
  |                              required by a bound introduced by this call
  |
  = help: the following other types implement trait `AsBytes`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            isize
          and $N others
note: required by a bound in `zerocopy::transmute`
 --> src/lib.rs
  |
  |     Src: AsBytes,
  |          ^^^^^^^ required by this bound in `zerocopy::transmute`

error[E0277]: the trait bound `*const usize: AsBytes` is not satisfied
 --> tests/ui-msrv/transmute-pointer.rs:7:30
  |
7 | const POINTER_VALUE: usize = zerocopy::transmute(&0usize as *const usize);
  |                              ^^^^^^^^^^^^^^^^^^^ the trait `AsBytes` is not implemented for `*const usize`
  |
  = help: the following other types implement trait `AsBytes`:
            f32
            f64
            i128
            i16
            i32
            i64
            i8
            isize
          and $N others
  = note: required for `usize` to implement `TransmuteFrom<*const usize>`
note: required by a bound in `zerocopy::transmute`
 --> src/lib.rs
  |
  |     Dst: FromBytes + TransmuteFrom<Src>,
  |                      ^^^^^^^^^^^^^^^^^^ required by this bound in `zerocopy::transmute`
